# board-repr-perft

./: Cargo.toml  README.md
benches/: benchmarks.rs
src/: column_bits.rs  column_bits_pext.rs  common.rs  lib.rs  naive.rs  naive_col_heights.rs  row_bits.rs  row_bits_col_heights.rs
