[package]
name = "board-repr-perft"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }
rand = "0.8.3"
fumen = "0.1.2"
rand_pcg = "0.3.1"

[[bench]]
name = "benchmarks"
harness = false
